feat: 加载初始化操作dom

--- a/use_wasm_example/index.html
+++ b/use_wasm_example/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rust WASM demo</title>
 
-    <script type="module" src="../pkg/rust_wasm.js"></script>
+    <script type="module" src="index.js"></script>
 
     <script>
       // /**
